--- a/oblig1.ipynb
+++ b/oblig1.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.Look at the big picture"
+    "## 1. Frame the problem and look at the big picture"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.Get the data"
+    "## 2. Get the data"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.Explore the data to gain insights"
+    "## 3. Explore the data to gain insights"
    ]
   },
   {
@@ -774,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.Prepare the data to better expose the underlying data patterns to machine learning algorithms"
+    "## 4. Prepare the data to better expose the underlying data patterns to machine learning algorithms"
    ]
   },
   {
@@ -1494,21 +1494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explore the data, feature engineering, prepare the data, explore models, fine-tune models, evaluate and validate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I will leave this to you. First, you should explore the features by plotting and computing various statistics. You should try to uncover connections between the features and between the features and the labels by, for example, computing correlations. You may consider constructing new features by combining existing ones. Before training models, ensure that the features are in the form the models expect (f.ex., remember to normalize the features if you're using models that depend on feature normalization). Remember to construct a thorough evaluation setup that you can use during model exploration. Cross-validation may be helpful. Perhaps you should consider stratified splitting? Finally, consider ensembling multiple fine-tuned models to increase performance."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5. Explore many different models and short-list the best ones"
+    "## 5. Explore many different models and short-list the best ones"
    ]
   },
   {
@@ -2577,6 +2563,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 6. Fine-tune your models and combine them into a great soution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This gave us a better result. "
    ]
   },
@@ -2644,6 +2637,13 @@
    ],
    "source": [
     "mean_squared_error(y_test, y_pred_gbr, squared=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Present your solution"
    ]
   },
   {
