--- a/oblig1.ipynb
+++ b/oblig1.ipynb
@@ -32,7 +32,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this task is predict future house prices in California with different models, such as regression and classification. We will then compare the models and decide which one gives best results. "
+    "The goal of this task is predict house prices in California. Using various features i.e total bedrooms and ocean proximity. This can be used to determent the value of your house if you're selling or fairly priced if you're a buyer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " There are other factors in the broader picture which can influence the performance mesures, and will not be efficient in different states such as innland states with no oceans. \n",
+    "\n",
+    "\n",
+    " We will keep this simple and only predict the prices in California. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since this is a regression problem, we will be using Root Mean Squared Error (RMSE)"
    ]
   },
   {
@@ -2403,6 +2420,7 @@
     }
    ],
    "source": [
+    "#RSME\n",
     "mean_squared_error(y_test, y_pred_logr, squared=False)"
    ]
   },
@@ -2466,6 +2484,7 @@
     }
    ],
    "source": [
+    "#RSME\n",
     "mean_squared_error(y_test, y_pred_dtr, squared=False)"
    ]
   },
@@ -2556,6 +2575,7 @@
     }
    ],
    "source": [
+    "#RSME\n",
     "mean_squared_error(y_test, y_pred_gbr, squared=False)"
    ]
   },
@@ -2636,6 +2656,7 @@
     }
    ],
    "source": [
+    "#RSME\n",
     "mean_squared_error(y_test, y_pred_gbr, squared=False)"
    ]
   },
