--- a/oblig1.ipynb
+++ b/oblig1.ipynb
@@ -49,6 +49,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Regression is a supervised learning algorithm. \n",
+    "Used to predict continous numerical value.\n",
+    "Houseprices are always fluctuating, either growing or shrinking."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Since this is a regression problem, we will be using Root Mean Squared Error (RMSE)"
    ]
   },
@@ -72,7 +81,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import data and giving them variable names. Train for training the model, and test for testing the model."
+    "There are two different data sets. We will elaborate more in step 3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import data and giving them variable names. Train for training data set, and test for testing data set."
    ]
   },
   {
@@ -97,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Training set"
+    "### Training set"
    ]
   },
   {
@@ -264,6 +280,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "We notice the number of elements in total bedrooms is different compared to the rest of the features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -292,6 +316,13 @@
    ],
    "source": [
     "train[\"median_house_value\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at median house values in training set."
    ]
   },
   {
@@ -325,6 +356,13 @@
    ],
    "source": [
     "train.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at a summarized detailed dataframe in the training set."
    ]
   },
   {
@@ -567,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our target label is stored under `median_house_value`. It is a continuous value and our task is a *regression task*. "
+    "Displaying the statistics including i.e min value, max value and mean."
    ]
   },
   {
@@ -604,7 +642,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Testing set"
+    "We note many houses between $100.000 and $200.000 with decreasing amount towards $500.000. Then a spike again with houses >$500.000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing set"
    ]
   },
   {
@@ -777,14 +822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 4128 test instances. Again, there are some missing values in the `total_bedrooms` feature. Note that there's a feature, `Id`, that is not present in the training data set. You'll have to deal with that later. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Explore the data, feature engineering, prepare the data, explore models, fine-tune models, evaluate and validate"
+    "After exploring the data, we found there are 4128 test instances. Again, there are some missing values in the `total_bedrooms` feature. Note that there's a feature, `Id`, that is not present in the training data set. We have to deal with that later. "
    ]
   },
   {
@@ -822,7 +860,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Drop ISLAND under ocean_proximit, beause it does not exists in the test_data"
+    "Drop ISLAND under ocean_proximity, beause it does not exists in the test_data"
    ]
   },
   {
@@ -1408,7 +1446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filling the missing values in the training_set in total_bedrooms with mean."
+    "Filling the missing values for the training set in total_bedrooms with mean."
    ]
   },
   {
@@ -1460,7 +1498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filling inn the missing values in the Testing_set in total_bedrooms with mean."
+    "Filling inn the missing values for the Testing_set in total_bedrooms with mean."
    ]
   },
   {
@@ -1504,7 +1542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No all coloums have equal lenght."
+    "Now all coloums have equal lenght."
    ]
   },
   {
@@ -1512,6 +1550,14 @@
    "metadata": {},
    "source": [
     "## 5. Explore many different models and short-list the best ones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that the sets are complete.\n",
+    "We are ready to train the data."
    ]
   },
   {
@@ -1538,6 +1584,20 @@
    "source": [
     "X = dfTrain.drop(['median_house_value'], axis=1)\n",
     "y = train.median_house_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll store the features in X and labes in y. y is the median house values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating training and testing sets from train data."
    ]
   },
   {
@@ -1811,6 +1871,14 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X,y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test set is simulated as unseen data, and should not be touched during the training.\n",
+    "We set the test size to 30% while the training set is 70%."
    ]
   },
   {
@@ -2337,6 +2405,13 @@
    ],
    "source": [
     "X_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We take a quick look at the training and testing set, after train test split."
    ]
   },
   {
