--- a/oblig1.ipynb
+++ b/oblig1.ipynb
@@ -1549,21 +1549,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Explore many different models and short-list the best ones"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that the sets are complete.\n",
-    "We are ready to train the data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Train_Test_Split\n"
    ]
   },
@@ -2418,6 +2403,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 5. Explore many different models and short-list the best ones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that the sets are complete.\n",
+    "We are ready to train the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Logistic Regression"
    ]
   },
@@ -2665,7 +2665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This gave us a better result. "
+    "Gradient boost regressor gave us the best result. "
    ]
   },
   {
@@ -2674,7 +2674,7 @@
    "source": [
     "Going further with the gradient boosting model. We fine tune the model.\n",
     "Giving it \n",
-    "n_estimators is used to avoid overfitting. Can go from 1 to inf. default is 100\n",
+    "n_estimators which is used to avoid overfitting. Can go from 1 to inf. default is 100\n",
     "\n",
     "Max_depth limits the number of nodes in the tree.\n",
     "\n",
@@ -2876,6 +2876,13 @@
    ],
    "source": [
     "submission.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8. Launch, monitor, and maintain your system"
    ]
   },
   {
